style.css
/* ... */
	p.pullout .pullout_label {
    color: #888;
		display: block;
    font-size: 1.6rem;
    font-weight: bold;
		margin-bottom: .5em;
	}

	p.pullout.left {
		float: left;
		margin: 0 1.5rem 1.5rem 0;
	}

  /* 500px */
  @media only screen and (max-width:499px) {

    p.pullout {
      margin: 0 0 3rem 0;
    	width: 100%;
    }

  }

p.wp-caption-text {
     color: #666;
     font-size: 1.4rem;
}

.postmeta {
	color: #777;
  display: block;
  font-size: 1.6rem;
  line-height: 1.4;
  margin-bottom: 1em;
}

  .date {
    margin-right: .5em;
  }

  .comment_link:before {
    content: '\f300';
    display: inline-block;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font: normal 1.6rem/1 'Genericons';
    speak: none;
    -webkit-transform: scale(-1, 1);
  	-moz-transform: scale(-1, 1);
  	-ms-transform: scale(-1, 1);
  	-o-transform: scale(-1, 1);
  	transform: scale(-1, 1);
    vertical-align: top;
  }

pre {
	color: #555;
	margin-left: 3rem;
	white-space: pre-wrap; /* css-3 */
	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
	white-space: -pre-wrap; /* Opera 4-6 */
	white-space: -o-pre-wrap; /* Opera 7 */
	word-wrap: break-word; /* Internet Explorer 5.5+ */
}

small {
	font-size: 80%;
}

strong,
b,
bold {
	font-weight: bold;
}

sup {
	font-size: 75%;
}

.syntaxhighlighter {
	font-size: 1.4rem;
	margin-bottom: 3rem;
}

ol,
ul {
	margin-bottom: 1.5em;
	margin-left: 3rem;
  padding: 0;
}

ol.footnotes li {
  font-size: 1.4rem;
  margin-bottom: 1em;
}

li {
	margin-bottom: 1.4rem;
  padding: 0;
}

li li:first-child {
  margin-top: 1.4rem;
}



/*------------------------------
Images
------------------------------*/

img {
  box-sizing: border-box;
  height: auto;
  margin-bottom: 3rem;
  max-width: none;
}

img.alignone {
  clear: both;
  display: block;
}

img.aligncenter {
	clear: both;
	display: block;
	margin-left: auto;
  margin-right: auto;
}

img.alignleft,
.wp-caption.alignleft {
	padding-right: 1.5rem;
}

img.alignright,
.wp-caption.alignright {
	padding-left: 1.5rem;
}

img.size-full {
  max-width: 100%;
}

img.size-large {
  width: 64rem;
}

img.size-medium,
img.wp-post-image.attachment-medium {
  max-width: 50%;
  width: 30rem;
}

img.wp-post-image.attachment-medium {
  float: right;
  padding-left: 1.5rem;
}

  /* 2x the max width of the image (600px), plus 2x the image margin (630px),
  plus 2x the #content_column padding (650px). */
  @media only screen and (max-width:649px) {

    img.size-medium,
    img.wp-post-image.attachment-medium {
      clear: both;
    	display: block;
      float: none;
    	margin-left: auto;
      margin-right: auto;
      max-width: none;
      padding: 0;
    }

  }

img.size-thumbnail {
  max-width: 25%;
  width: 15rem;
}

  /* 2x the max width of the image (300px), plus 2x the image padding (330px),
  plus 2x the #content_column padding (350px). */
  @media only screen and (max-width:349px) {

    img.size-thumbnail {
      clear: both;
    	display: block;
      float: none;
    	margin-left: auto;
      margin-right: auto;
      max-width: none;
    }

  }

.gallery-item {
  margin: 0 0 2rem 0;
}

.gallery-item img {
  margin-bottom: 0;
  max-width: none;
}

/* About */   .page-id-3379 .gallery-size-thumbnail img,
/* TBD Law */ .page-id-128819 .gallery-size-thumbnail img {
  border-radius: 50%;
}

img.avatar {
	border-radius: 50%;
}

img.inline {
  display: inline !important;
}

.single div[itemprop="image"] {
  line-height: 1; /* Otherwise the bottom margin (see below) won't be correct. */
}

.page img.wp-post-image.size-standard_thumbnail,
.single img.wp-post-image.size-standard_thumbnail {
  margin-bottom: 2rem;
  width: 100%;
}

.wp-caption {
  margin-bottom: 3rem;
  max-width: 100%;
}

.wp-caption img {
  display: inline-block;
  margin-bottom: .1rem;
}

  /* 2x the max width of the image (600px), plus 2x the image margin (630px),
  plus 2x the #content_column padding (650px). */
  @media only screen and (max-width:649px) {

    .wp-caption {
      clear: both;
      display: block;
      float: none;
      margin-left: auto !important;
      margin-right: auto !important;
      width: auto;
    }

  }

.gallery {
  margin-bottom: 3rem !important;
}

#gallery-2 img {
  border: 0 !important;
}

#gallery-3 dl.gallery-item {
  border: 1px solid #ddd !important;
  margin: 0 .2rem .2rem 0!important;
  width: 32.708333333% !important;
}

#gallery-3 img {
  border: 0 !important;
  height: auto;
  width: 100%;
}


/*------------------------------
Header
------------------------------*/

#header a:hover,
#header a:focus {
	text-decoration: none;
}


  /*------------------------------
  Leaderboard Ad
  ------------------------------*/

  #lawyerist_ap1 {
    background-color: #eee;
    padding: 1rem 0;
  	width: 100%;
  }

    /* Leaderboard ad width (728px) + 20px for padding */
    @media only screen and ( max-width: 747px ) {

    	#lawyerist_ap1 {
    		display: none;
    	}

    }

    #div-gpt-ad-1429843825352-0 {
    	margin:0 auto;
    }


  /*------------------------------
  Title
  ------------------------------*/

  #title {
  	display: block;
  	float: left;
    font-size: 3.2rem;
    font-family: 'adler', serif;
    font-weight: normal;
    height: 3.2rem;
    line-height: 1.2;
    margin: 0;
    padding: 0;
  	width: auto;
  }

  	#title a {
      color: #fff;
  		display: block;
  	}

    #title a:hover {
      color: #ddd;
    }

  #description {
    color: #ccc;
    float: right;
    font-size: 1.8rem;
    line-height: 3.2rem;
    margin: 0;
  }


    /* 780px */
    @media only screen and (max-width:779px) {

      #description {
        display: none;
      }

    }

    /* 620px */
    @media only screen and (max-width:619px) {

      #title {
        float: none;
      }

    }


/*------------------------------
Menu
------------------------------*/

#main-menu .main-menu-item {
	display: inline-block;
	margin: 0;
  padding: 0;
  position: relative;
  width: 20%;
}
/* ... */

